# python_flask_formation

./: .flake8  pyproject.toml
python_flask_formation/: __init__.py  auth.py  db.json  models.py
python_flask_formation/static/: main.js  style.css
python_flask_formation/templates/: base.html  index.html  login.html
