[tool.poetry]
name = "python-flask-formation"
version = "0.1.0"
description = ""
authors = ["NyxAether <contact.nyxhemera@gmail.com>"]
readme = "README.md"
packages = [{include = "python_flask_formation"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-cors = "^3.0.10"
flake8 = "^6.0.0"
mypy = "^1.3.0"
flask-login = "^0.6.2"
tinydb = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
